--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 小鹏技术博客
-description: 有梦想，有希望
+description: 保持热爱，怀揣梦想
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
